--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "4.0.0",
     "element-react": "^1.4.5",
     "element-theme-default": "^1.4.12",
-    "eslint": "4.10.0",
+    "eslint": "^4.10.0",
     "eslint-config-react-app": "^2.0.1",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.39.1",
